--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,7 +5,7 @@
     --header-height: 3rem;
 
     --hue-color: 205;
-    --first-color: hsl(var(--hue-color), 69%, 61%);
+    --first-color: hsl(var(--hue-color), 51%, 61%);
     --first-color-second: hsl(var(--hue-color), 69%, 61%);
     --first-color-alt: hsl(var(--hue-color), 57%, 53%);
     --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
@@ -15,6 +15,9 @@
     --input-color: hsl(var(--hue-color), 70%, 96%);
     --body-color: hsl(var(--hue-color), 60%, 99%);
     --container-color: #fff;
+    --scroll-bar-color: hsl(var(var(--hue-color), 12%, 90%));
+    --scroll-thumb-color: hsl(var(var(--hue-color), 12%, 80%));
+
 
     --body-font: 'Poppins', sans-serif;
 
@@ -60,11 +63,45 @@
 
 }
 
+/* Variables Dark theme */
+
+body.dark-theme{
+
+    
+    --first-color-second: hsl(var(--hue-color), 30%, 8%);
+    --title-color: hsl(var(--hue-color), 8%, 95%);
+    --text-color: hsl(var(--hue-color), 8%, 75%);
+    --input-color: hsl(var(--hue-color), 29%, 16%);
+    --body-color: hsl(var(--hue-color), 28%, 12%);
+    --container-color: hsl(var(--hue-color), 29%, 16%);
+    --scroll-bar-color: hsl(var(var(--hue-color), 12%, 48%));
+    --scroll-thumb-color: hsl(var(var(--hue-color), 12%, 36%));
+
+}
+
+
+
+.nav__btns{
+
+    display: flex;
+    align-items: center;
+}
+
+.change-theme{
+
+    font-size: 1.25rem;
+    color:var(--title-color);
+    margin-right: var(--mb-1);
+    cursor: pointer;
+}
+
+
 *{
 
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    /* transition: color 1s ease; */
     
 }
 
@@ -176,7 +213,7 @@ img{
 
 .nav__logo,
 .nav__toggle{
-
+    
     color:var(--title-color);
     font-weight: var(--font-medium);
 
@@ -200,6 +237,12 @@ img{
 
     color:var(--first-color);
     
+}
+
+
+.nav__logo{
+
+    font-size:1.2rem;
 }
 
 @media screen and (max-width: 767px){
@@ -284,7 +327,7 @@ img{
 
 .home__content{
 
-    grid-template-columns: .5fr 3fr;
+    /* grid-template-columns: .5fr 3fr; */
     padding-top: 3.5rem;
     align-items: center;
 
@@ -318,25 +361,31 @@ img{
 
     width: 200px;
     fill:var(--first-color);
+    justify-self: center;
+    padding: 0;
+    margin: 0;
+
+
 
 }
 
 .home__blob-img{
-
     width: 170px;
 
 }
 
 
 .home__data{
+    /* grid-column: 1/3; */
 
-    grid-column: 1/3;
+
 
 }
 
 .home__title{
 
     font-size: var(--big-font-size);
+    text-align: center;
 
 }
 
@@ -346,6 +395,8 @@ img{
     color:var(--text-color);
     font-weight: var(--font-medium);
     margin-bottom: var(--mb-0-75);
+    text-align: center;
+
 
 }
 
@@ -400,14 +451,41 @@ img{
 
 .button{
 
-    display: inline-block;
+    display:block;
     background-color: var(--first-color);
     color:#fff;
     padding: 1rem;
     border-radius: .5rem;
     font-weight: var(--font-medium);
+    align-self: center;
+    text-align: center;
+    max-width: 200px;
 
 }
+
+
+.cv{
+
+    align-items: center;
+    
+    margin: 0 auto;
+
+}
+
+
+#enviar{
+
+    background-color: var(--first-color);
+    color: #fff;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    font-weight: var(--font-medium);
+    border:none;
+    cursor: pointer;
+
+}
+
+
 
 .button:hover{
 
@@ -430,11 +508,24 @@ img{
 
 }
 
+
+.flex{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+
+
+
 .about__img{
 
 
     width: 200px;
-    border-radius: .5rem;
+    height: auto;
+    border-radius: 50%;
     justify-self: center;
     align-self: center;
     
@@ -444,6 +535,7 @@ img{
 
     text-align: left;
     margin-bottom: var(--mb-2-5);
+    text-align:start;
 }
 
 .about__info{
@@ -493,6 +585,7 @@ img{
 
     display: flex;
     align-items: center;
+    justify-content: center;
     margin-bottom: var(--mb-2-5);
     cursor: pointer;
 
@@ -507,7 +600,7 @@ img{
 }
 
 .skills__icon{
-
+    width: 3rem;
     margin-right: var(--mb-0-75);
 
 }
@@ -550,6 +643,9 @@ img{
 
 .skilss__name{
 
+    display: block;
+    justify-content: center;
+    align-items: center;
     font-size: var(--normal-font-size);
     font-weight: var(--font-medium);
 
@@ -604,4 +700,715 @@ img{
 
 
 
+.qualification__tabs{
 
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: var(--mb-2);
+
+}
+
+.qualification__button{
+
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+    cursor: pointer;
+}
+
+.qualification__button:hover{
+
+    color:var(--first-color);
+}
+
+.qualification__icon{
+
+    font-size: 1.8rem;
+    margin-right: var(--mb-0-25);
+}
+
+.qualification__data{
+
+    display: grid;
+    grid-template-columns: 1fr max-content 1fr;
+    column-gap: 1.5rem;
+}
+
+.qualification__title{
+
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-medium);
+}
+
+.qualification__subtitle{
+
+    display: inline-block;
+    font-size: var(--small-font-size);
+    margin-bottom: var(--mb-1);
+
+}
+
+.qualification__calendar{
+
+    scroll-snap-stop: var(--smaller-font-size);
+    color:var(--text-color-light);
+}
+
+.qualification__rounder{
+
+    display: inline-block;
+    width: 13px;
+    height: 13px;
+    background-color:var(--first-color) ;
+    border-radius: 50%;
+
+}
+
+.qualification__line{
+
+    display: block;
+    width: 1px;
+    height: 100%;
+    background-color: var(--first-color);
+    transform: translate(6px, -7px);
+}
+
+.qualification [data-content]{
+
+    display: none;
+}
+
+.qualification__active[data-content]{
+
+    display: block;
+}
+
+.qualification__button.qualification__active{
+
+    color:var(--first-color);
+}
+
+
+
+
+.footer{
+
+    padding-top: 2rem;
+}
+
+.footer__container{
+
+    row-gap: 0.5rem;
+}
+
+.footer__bg{
+    padding-top: 1rem;
+    background-color: var(--first-color-second);
+
+
+}
+
+.footer__title{
+
+    font-size: var(--h1-font-size);
+    margin-bottom: var(--mb-0-25);
+}
+
+.footer__subtitle{
+
+    font-size: var(--small-font-size);
+}
+
+
+
+.footer__link:hover{
+
+    color:var(--first-color-lighter);
+}
+
+.footer__socials{
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding-bottom: 1rem;
+
+}
+
+
+.footer__social{
+
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.footer__social:hover{
+
+    color:var(--first-color-lighter);
+}
+
+.footer__copy{
+
+    display: flex;
+    justify-content: center;
+    font-size: var(--small-font-size);
+    text-align: center;
+    color:#fff;
+
+}
+
+
+.footer__title,
+.footer__subtitle,
+.footer__social,
+.footer__link{
+
+    color:#fff;
+
+}
+
+
+
+
+/* 
+::-webkit-scrollbar{
+
+    width: .60rem;
+    background-color: var(--scroll-bar-color);
+    border-radius: .5rem;
+
+}
+
+
+::-webkit-scrollbar-thumb{
+
+
+    background-color: var(--scroll-thumb-color);
+    border-radius: .5rem;
+
+}
+
+::-webkit-scrollbar-thumb:hover{
+
+    background-color: var(--text-color-light);
+
+
+}
+
+
+.scrollup{
+
+    position: fixed;
+    right: 1rem;
+    bottom: -20%;
+    background-color: var(--first-color);
+    opacity: .8;
+    padding: 0 .3rem;
+    border-radius: .4rem;
+    z-index: var(--z-tooltip);
+    transition: .4s;
+}
+
+.scrollup:hover{
+
+    background-color: var(--first-color-alt);
+
+}
+
+.scrollup__icon{
+
+    font-size: 1.5rem;
+    color:#fff;
+
+}
+
+
+.show-scroll{
+
+    bottom: 5rem;
+
+} */
+
+
+.contact__container{
+
+    row-gap: 3rem;
+
+}
+
+.contact__icon{
+
+    font-size: 2rem;
+    color:var(--first-color);
+    margin-right: var(--mb-0-75);
+
+}
+
+.contact__title{
+
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+
+}
+
+.contact__subtitle{
+
+    font-size: var(--small-font-size);
+    color:var(--text-color-light);
+
+}
+
+.contact__content{
+
+    background-color: var(--input-color);
+    border-radius: .5rem;
+    padding: .75rem 1rem .25rem;
+
+}
+
+
+.contact__label{
+
+    font-size: var(--smaller-font-size);
+    color:var(--title-color);
+
+
+}
+
+.contact__input{
+
+    width: 100%;
+    background-color: var(--input-color);
+    color:var(--text-color);
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    border: none;
+    outline: none;
+    padding: .25 rem .5rem .5rem 0;
+
+}
+
+
+
+.portfolio__container{
+
+    overflow: initial;
+    
+}
+
+.porfolio__content{
+
+    padding: 0 1.5rem;
+
+}
+
+
+
+
+.portfolio__img{
+
+    width: 265px;
+    border-radius: .5rem;
+    justify-self: center;
+
+}
+
+.portfolio__title{
+
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-0-5);
+}
+
+.portfolio__description{
+
+    margin-bottom: var(--mb-1);
+
+}
+
+.porfolio__button:hover .button__icon{
+
+    transform: translateX(.25rem);
+}
+
+
+.swiper-button-prev::after,
+.swiper-button-next::after{
+
+    content: '';
+}
+
+.swiper-portfolio-icon{
+    font-size: 2rem;
+    color:var(--first-color);
+}
+
+.swiper-button-prev{
+    left:-.5rem;
+}
+
+.swiper-button-next{
+    right:-.5rem;
+}
+
+.swiper-horizontal > .swiper-pagination-bullets{
+
+    bottom: -2.5rem;
+}
+
+.swiper-pagination-bullet-active{
+    background-color: var(--first-color);
+}
+
+.swiper-button-prev,
+.swiper-button-next,
+.swiper-pagination-bullet{
+
+    outline: none;
+}
+
+
+
+.tech__icon{
+
+    width: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.services__container{
+
+
+    gap:1.5rem;
+    grid-template-columns: repeat(2, 1fr);
+
+}
+
+.services__content{
+
+    position: relative;
+    background-color: var(--container-color);
+    padding: 3.5rem .5rem 1.25rem 1.5rem;
+    border-radius: .25rem;
+    box-shadow: 0 2px 4px rgba(0,0,0,.15);
+    transition: .3s;
+    
+
+}
+
+.services__content:hover{
+
+    box-shadow: 0 4px 8px rgba(0,0,0,.15);
+}
+
+.services__icon{
+
+    display: block;
+    font-size: 1.5rem;
+    color: var(--first-color);
+    margin-bottom: var(--mb-1);
+}
+
+.services__title{
+
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-1);
+    font-weight: var(--font-medium);
+
+}
+
+
+
+
+
+.success{
+
+    display: flex;
+    height: 5rem;
+    max-width: 19rem;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: var(--body-font);
+    color: white;
+    background-color: var(--first-color);
+    margin: 0 auto;
+    margin-bottom: 2rem;
+
+
+}
+
+.error{
+
+
+    display: flex;
+    height: 5rem;
+    max-width: 19rem;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: var(--body-font);
+    color: white;
+    background-color: red;
+    margin: 0 auto;
+    margin-top:0;
+    margin-bottom: 2rem;
+
+
+}
+
+
+
+
+
+
+
+
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 350px){
+
+    .container{
+
+        margin-left: var(--mb-1);
+        margin-right: var(--mb-1);
+    }
+
+    .nav__menu{
+
+        padding: 2rem .25rem 4rem; 
+    }
+
+    .nav__list{
+
+        column-gap: 0;
+    }
+
+    .home__content{
+
+        grid-template-columns: .25fr 3fr;
+        align-self: center;
+
+    }
+
+    .home__blob{
+
+        width: 180px;
+    }
+
+    .skills__title{
+
+        font-size: var(--normal-font-size);
+    }
+
+    .qualification__data{
+
+        gap:.5rem;
+    }
+
+    /* .services__container{
+
+        grid-template-columns: max-content;
+        justify-content: center;
+    }
+
+    .services__content{
+
+        padding-right: 3.5rem;
+
+    }
+
+    .services__modal{
+
+        padding: 0 .5rem;
+    } */
+
+
+}
+
+
+@media screen and (min-width: 568px){
+
+    .home__content{
+
+        grid-template-columns: max-content 1fr 1fr;
+
+    }
+
+    .home__data{
+
+        grid-column: initial;
+
+    }
+
+    .home__img{
+
+        order:1;
+        justify-self: center;
+    }
+
+    .about__container{
+
+
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+form{
+
+    margin: 0 30px;
+    justify-self: center;
+}
+
+}
+
+
+@media screen and (min-width:769px){
+
+    .container{
+
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    body{
+
+        margin:0;
+
+    }
+
+    .section{
+
+        padding: 6rem 0 2rem;
+    }
+
+    .home.section.grid{
+
+        padding-top: 1rem;
+        padding-bottom: 0;
+       
+    }
+
+
+    .section__subtitle{
+
+        margin-bottom: 4rem;
+    }
+
+    .header{
+
+        top: 0;
+        bottom: initial;
+    }
+
+
+    .header,
+    .main,
+    .footer__container{
+
+        padding: 0 1rem;
+    }
+
+
+    .nav{
+
+        height: calc(var(--header-height)+1.5rem);
+        column-gap: 1rem;
+        padding: 1rem;
+
+    }
+
+
+    .nav__icon,
+    .nav__close,
+    .nav__toggle{
+
+        display: none;
+
+    }
+
+    .nav__list{
+
+        display: flex;
+        column-gap: 2rem;
+        
+    }
+
+
+
+    .nav__menu{
+
+        margin-left: auto;
+    }
+
+    .change-theme{
+
+        margin: .5rem;
+    }
+
+
+    .home__container{
+
+        /* row-gap: 5rem; */
+        padding-top: 4rem;
+        align-self: center;
+    }
+
+    .home__content{
+
+        padding-top: 5.5rem;
+        column-gap: 2rem;
+    }
+
+    .home__blob{
+
+        width: 270px;
+        align-self: center;
+    }
+}
+
+
+@media screen and (min-width: 1024px){
+
+    .header,
+    .main,
+    .footer__container{
+
+        padding:0;
+    }
+
+    .home__blob{
+
+        width: 320px;
+
+    }
+
+    .home__social{
+
+        transform: translateX(-6rem);
+    }
+
+
+    section.contact, 
+    .qualification.container,
+    .skills.section
+    {
+        display: grid;
+        
+    }
+
+    .contact__container,
+    .qualification.container,
+    .qualification__container,
+    .skills.section{
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+
+    }
+
+
+}
