--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -375,12 +375,12 @@ img{
 }
 
 
-.home__data{
-    /* grid-column: 1/3; */
+/* .home__data{
+    grid-column: 1/3;
 
 
 
-}
+} */
 
 .home__title{
 
